* config/alpha/alpha.md (call_value_osf_1_er peepholes): Fix typo.
        * gcc.dg/inline-2.c: New.

        * lib/scanasm.exp (scan-assembler): Remove optional vmessage arg.
        Add optional target arg.  Check number of arguments.
        (scan-assembler-not, scan-assembler-dem): Likewise.
        (scan-assembler-dem-not): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49166 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-23  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.md (call_value_osf_1_er peepholes): Fix typo.
+
 2002-01-23  Aldy Hernandez  <aldyh@redhat.com>
 
         * c-parse.in (parmlist_or_identifiers): Add maybe_attribute.
