--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-24  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/sparc/sparc.md (fix_trunctfdi2): Correct typo in mode.
+
 2002-01-23  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.md (call_value_osf_1_er peepholes): Fix typo.
