--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-23  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md: Fix xorqi and xorqi so that they will
+	accept to accept 0x80 as operands[2].
+
 2002-01-24  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sparc/sparc.md (fix_trunctfdi2): Correct typo in mode.
