* java/awt/BorderLayout.java (addLayoutComponent): Added missing 	`else'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49172 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-23  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/BorderLayout.java (addLayoutComponent): Added missing
+	`else'.
+
 	* Makefile.in: Rebuilt.
 	* Makefile.am (awt_java_source_files): Added new files.
 	* java/awt/Toolkit.java: Merged with Classpath.
