--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-23  Richard Henderson  <rth@redhat.com>
+
+	* fold-const.c (fold): Change UINT_MAX test to check vs precision
+	rather than TYPE_MAX_VALUE.  Fix indentation and a bogus negation.
+
 2002-01-24  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sh/sh.md (symGOT_load, sym2GOT, sym2GOTOFF): New expands.
