--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-24  Jason Merrill  <jason@redhat.com>
+
+	* config/sparc/sparc.md (call-jump peepholes): Pass the right insn
+	to can_throw_internal.
+
 2002-01-23  Richard Henderson  <rth@redhat.com>
 
 	* fold-const.c (fold): Change UINT_MAX test to check vs precision
