--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-24  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/arm.c (arm_hard_regno_mode_ok): Allow SImode
+	values to be assigned to the stack pointer.
+
 2002-01-14  Hartmut Penner  <hpenner@de.ibm.com>
 
 	* emit_rtl.c (gen_lowpart_common): Conversion from const_int 
