--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-24  Tom Tromey  <tromey@redhat.com>
+
+	* gnu/awt/xlib/XToolkit.java (getPrintJob): New stub method.
+
 2002-01-23  Tom Tromey  <tromey@redhat.com>
 
 	* java/awt/BorderLayout.java (addLayoutComponent): Added missing
