--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -700,8 +700,8 @@
 		 (match_operand:HI 2 "nonmemory_operand" "L,N,n,r,r")))]
   "TARGET_H8300"
   "@
-   adds	%2,%A0
-   subs	%G2,%A0
+   adds	%2,%T0
+   subs	%G2,%T0
    add.b	%s2,%s0\;addx	%t2,%t0
    add.w	%T2,%T0
    mov.w	%T1,%T0\;add.w	%T2,%T0"
@@ -714,8 +714,8 @@
 		 (match_operand:HI 2 "nonmemory_operand" "L,N,n,r")))]
   "TARGET_H8300H || TARGET_H8300S"
   "@
-   adds	%2,%A0
-   subs	%G2,%A0
+   adds	%2,%S0
+   subs	%G2,%S0
    add.w	%T2,%T0
    add.w	%T2,%T0"
   [(set_attr "length" "2,2,4,2")
@@ -754,8 +754,8 @@
 		 (match_operand:SI 2 "nonmemory_operand" "L,N,i,r")))]
   "TARGET_H8300H || TARGET_H8300S"
   "@
-   adds	%2,%A0
-   subs	%G2,%A0
+   adds	%2,%S0
+   subs	%G2,%S0
    add.l	%S2,%S0
    add.l	%S2,%S0"
   [(set_attr "length" "2,2,6,2")
