* verify.cc (is_assignable_from_slow): If source is an interface, 	we must also check the superclass.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49189 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-24  Per Bothner  <per@bothner.com>
+
+	* verify.cc (is_assignable_from_slow): If source is an interface,
+	we must also check the the superclass.
+
 2002-01-24  Tom Tromey  <tromey@redhat.com>
 
 	* gnu/awt/xlib/XToolkit.java (getPrintJob): New stub method.
