Improved ChangeLog entry for verify.cc (is_assignable_from_slow).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49190 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,7 +1,7 @@
 2002-01-24  Per Bothner  <per@bothner.com>
 
-	* verify.cc (is_assignable_from_slow): If source is an interface,
-	we must also check the the superclass.
+	* verify.cc (is_assignable_from_slow): If target is an interface,
+	we must still check the source's superclass before giving up.
 
 2002-01-24  Tom Tromey  <tromey@redhat.com>
 
