--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-24  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/sh/sh.md (sym_label2reg): Make sure all CONSTs have
+	modes.
+
 2002-01-24  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.c (print_operand): Remove support for
