--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-25  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/lang/natObject.cc (X86 compare_and_swap): Use +m constraint.
+
 2002-01-24  Per Bothner  <per@bothner.com>
 
 	* verify.cc (is_assignable_from_slow): If target is an interface,
