--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-24  Aldy Hernandez  <aldyh@redhat.com>
+
+        * loop.c (emit_prefetch_instructions): Use the prefetch insn's
+        mode, not Pmode.
+
+        * builtins.c (expand_builtin_prefetch): Same.
+
 2002-01-24  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sh/sh.md (sym_label2reg): Make sure all CONSTs have
