* config/h8300/h8300.md (negation patterns): Tighten 	predicates to register_operand.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49204 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -1286,7 +1286,7 @@
 
 (define_insn "negqi2"
   [(set (match_operand:QI 0 "register_operand" "=r")
-	(neg:QI (match_operand:QI 1 "general_operand" "0")))]
+	(neg:QI (match_operand:QI 1 "register_operand" "0")))]
   ""
   "neg	%X0"
   [(set_attr "length" "2")
@@ -1294,7 +1294,7 @@
 
 (define_expand "neghi2"
   [(set (match_operand:HI 0 "register_operand" "")
-	(neg:HI (match_operand:HI 1 "general_operand" "")))]
+	(neg:HI (match_operand:HI 1 "register_operand" "")))]
   ""
   "
 {
@@ -1316,7 +1316,7 @@
 
 (define_insn "neghi2_h8300h"
   [(set (match_operand:HI 0 "register_operand" "=r")
-	(neg:HI (match_operand:HI 1 "general_operand" "0")))]
+	(neg:HI (match_operand:HI 1 "register_operand" "0")))]
   "TARGET_H8300H || TARGET_H8300S"
   "neg	%T0"
   [(set_attr "length" "2")
@@ -1324,7 +1324,7 @@
 
 (define_expand "negsi2"
   [(set (match_operand:SI 0 "register_operand" "")
-	(neg:SI (match_operand:SI 1 "general_operand" "")))]
+	(neg:SI (match_operand:SI 1 "register_operand" "")))]
   ""
   "
 {
@@ -1346,7 +1346,7 @@
 
 (define_insn "negsi2_h8300h"
   [(set (match_operand:SI 0 "register_operand" "=r")
-	(neg:SI (match_operand:SI 1 "general_operand" "0")))]
+	(neg:SI (match_operand:SI 1 "register_operand" "0")))]
   "TARGET_H8300H || TARGET_H8300S"
   "neg	%S0"
   [(set_attr "length" "2")
