--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-25  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md (negation patterns): Tighten
+	predicates to register_operand.
+
 2002-01-24  Aldy Hernandez  <aldyh@redhat.com>
 
         * loop.c (emit_prefetch_instructions): Use the prefetch insn's
