* java/awt/Container.java (addNotify): Unconditionally call 	addNotifyContainerChildren and superclass addNotify.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49206 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-24  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/Container.java (addNotify): Unconditionally call
+	addNotifyContainerChildren and superclass addNotify.
+
 	* java/awt/image/ColorModel.java (getAlpha(Object)): Call
 	getAlpha, not getBlue.
 
