--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-25  Bob Wilson  <bob.wilson@acm.org>
+
+	* doc/install.texi (xtensa-*-elf): New target.
+	(xtensa-*-linux*): New target.
+	* doc/contrib.texi: Add myself.
+
 2002-01-25  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* config/arm/arm.c (arm_hard_regno_mode_ok): Allow any general
