* java/awt/FlowLayout.java (layoutContainer): Correctly compute 	loop termination condition. 	* java/awt/GridLayout.java (getSize): Use `real_cols' to compute 	width.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49216 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-25  Tom Tromey  <tromey@redhat.com>
+
+	* java/awt/FlowLayout.java (layoutContainer): Correctly compute
+	loop termination condition.
+	* java/awt/GridLayout.java (getSize): Use `real_cols' to compute
+	width.
+
 2002-01-24  Tom Tromey  <tromey@redhat.com>
 
 	* java/awt/Shape.java: Merged with Classpath.
