--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-25  David Edelsohn  <edelsohn@gnu.org>
+
+	* rs6000.md (prefetch): Make address V4SI mode so that the address
+	is restricted to legitimate form for instruction.
+
 2002-01-25  Bob Wilson  <bob.wilson@acm.org>
 
 	* doc/install.texi (xtensa-*-elf): New target.
