* config/stormy16/stormy16.md (tablejump_pcrel): Use a MEM 	to help folding.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49219 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-01-25  Geoffrey Keating  <geoffk@redhat.com>
+
+	* config/stormy16/stormy16.md (tablejump_pcrel): Use a MEM
+	to help folding.
+
 2002-01-25  David Edelsohn  <edelsohn@gnu.org>
 
 	* rs6000.md (prefetch): Make address V4SI mode so that the address
