* reload1.c (eliminate_regs_in_insn): Recognize frame pointer adjustments even if they are implemented by more than two insns.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49221 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-25  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* reload1.c (eliminate_regs_in_insn): Recognize frame pointer
+	adjustments even if they are implemented by more than two insns.
+
 Fri Jan 25 20:43:56 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* df.c (df_ref_create, df_ref_record_1, df_ref_record): Kill BB argument.
