* install-sh: Use _inst.$$_ for temp file name.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49228 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-25  Douglas B Rupp  <rupp@gnat.com>
+
+	* install-sh: Use _inst.$$_ for temp file name.
+
 2002-01-24  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* MAINTAINERS (Write After Approval): Move my contact info
