--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-25  Douglas B Rupp  <rupp@gnat.com>
+
+	* Makefile.in (install-headers-cp): New target.
+	* config.gcc (alpha-dec-*vms*): Install headers with
+	install-headers-cp
+
 Fri Jan 25 22:42:49 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* unroll.c (unroll_loop): Lower final_value to nonmemory operand;
