* config/alpha/x-vms (version): Make static.
	* config/alpha/vms.h (MD_FALLBACK_FRAME_STATE_FOR): Fix error
	in previous checkin.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49230 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-25  Douglas B Rupp  <rupp@gnat.com>
 
+	* config/alpha/x-vms (version): Make static.
+
+	* config/alpha/vms.h (MD_FALLBACK_FRAME_STATE_FOR): Fix error
+	in previous checkin.
+
 	* Makefile.in (install-headers-cp): New target.
 	* config.gcc (alpha-dec-*vms*): Install headers with
 	install-headers-cp
