--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-25  David O'Brien  <obrien@FreeBSD.org>
+
+	* config.gcc (x86_64-*-freebsd*): New target.
+	(x86_64-*-netbsd*,x86_64-*-linux*): Use ${tm_file} rather than its
+	value.
+	(i[34567]86-*-freebsd*): Don't include svr4.h.
+	* config/i386/freebsd64.h: New file.
+
 2002-01-25  Douglas B Rupp  <rupp@gnat.com>
 
 	* config/alpha/x-vms (version): Make static.
