* emit-rtl.c (gen_rtx_REG): Always return the same rtx         for PIC_OFFSET_TABLE_REGNUM.         (init_emit_once): Use gen_raw_REG to initialize pic_offset_table_rtx.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49234 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-25  Steve Ellcey  <sje@cup.hp.com>
+
+	* emit-rtl.c (gen_rtx_REG): Always return the same rtx
+	for PIC_OFFSET_TABLE_REGNUM.
+	(init_emit_once): Use gen_raw_REG to initialize pic_offset_table_rtx.
+
 2002-01-25  David O'Brien  <obrien@FreeBSD.org>
 
 	* config.gcc (x86_64-*-freebsd*): New target.
