--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-25  DJ Delorie  <dj@redhat.com>
+
+	* config/sparc/sparc.c (sparc_emit_set_symbolic_const64): Compare
+	using rtx_equal_p, not by comparing pointers.
+
 2002-01-25  Steve Ellcey  <sje@cup.hp.com>
 
 	* emit-rtl.c (gen_rtx_REG): Always return the same rtx
