Index: gcc/ChangeLog
	* dbxout.c (dbxout_init): Use assemble_name rather than just
	stripping off the first character.
	(dbxout_source_file): Likewise.

Index: gcc/testsuite/ChangeLog

	* gcc.dg/debug/debug.exp: New file.
        * gcc.dg/debug/trivial.c: New file.
        * gcc.dg/debug/20000503-1.c: Moved from gcc.dg/.
        * gcc.dg/debug/20010207-1.c: Moved from gcc.dg/.
        * gcc.dg/debug/20011223-1.c: Moved from gcc.dg/.
        * gcc.dg/debug/20020104-2.c: Moved from gcc.dg/.
        * gcc.dg/debug/debug-1.c: Moved from gcc.dg/.
        * gcc.dg/debug/debug-2.c: Moved from gcc.dg/.
        * gcc.dg/debug/debug-3.c: Moved from gcc.dg/.
        * gcc.dg/debug/debug-4.c: Moved from gcc.dg/.
        * gcc.dg/debug/debug-5.c: Moved from gcc.dg/.
        * gcc.dg/debug/debug-6.c: Moved from gcc.dg/.
        * gcc.dg/debug/dwarf2-1.c: Moved from gcc.dg/.
        * gcc.dg/debug/dwarf2-2.c: Moved from gcc.dg/.
        * gcc.dg/20000503-1.c: Removed.
        * gcc.dg/20010207-1.c: Removed.
        * gcc.dg/20011223-1.c: Removed.
        * gcc.dg/20020104-2.c: Removed.
        * gcc.dg/debug-1.c: Removed.
        * gcc.dg/debug-2.c: Removed.
        * gcc.dg/debug-3.c: Removed.
        * gcc.dg/debug-4.c: Removed.
        * gcc.dg/debug-5.c: Removed.
        * gcc.dg/debug-6.c: Removed.
        * gcc.dg/dwarf2-1.c: Removed.
        * gcc.dg/dwarf2-2.c: Removed.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49238 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-25  Geoffrey Keating  <geoffk@redhat.com>
+
+	* dbxout.c (dbxout_init): Use assemble_name rather than just
+	stripping off the first character.
+	(dbxout_source_file): Likewise.
+
 2002-01-25  DJ Delorie  <dj@redhat.com>
 
 	* config/sparc/sparc.c (sparc_emit_set_symbolic_const64): Compare
