--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-25  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/awt/image/MemoryImageSource.java (newPixels(byte[], ColorModel,
+	int, int):  Remove empty "if" statement to work around compiler bug.
+	(newPixels(int[], ColorModel, int, int): Likewise.
+
 2002-01-25  Per Bothner  <per@bothner.com>
 
 	* verify.cc (verify_fail):  Change from being a top-level function
