--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* builtins.c (expand_builtin_strncat): Remove redundant check for
+	INTEGER_CST.
+
 2002-01-25  David O'Brien  <obrien@FreeBSD.org>
 
 	* config/i386/x86-64.h (DEFAULT_PCC_STRUCT_RETURN): Do not overide
