2002-01-26  Toon Moene  <toon@moene.indiv.nluug.nl>
	* intrin.c (ffeintrin_cmp_name_): Correct comparison
	for intrinsics in intrinsic table (intrin.def).


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49248 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-26  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* intrin.c (ffeintrin_cmp_name_): Correct comparison
+	for intrinsics in intrinsic table (intrin.def).
+
 2002-01-22  Zack Weinberg  <zack@codesourcery.com>
 
 	* bad.c: Include intl.h.
