--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-26  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/include/texinfo.tex: Update to version 2002-01-04.07.
+
 2002-01-26  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md: Remove bit test patterns that cannot
