--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-26  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (alpha_sa_mask): Mark RA for unicos here too.
+	(alpha_sa_size): Use alpha_sa_mask to compute size of saved regs.
+
 2002-01-26  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md: Remove bit extraction patterns that
