2002-01-26  David Billinghurst  <David.Billinghurst@riotinto.com>
	* g77.dg/f77-edit-i-in.f: New test
	* g77.dg/f77-edit-i-out.f: New test


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49257 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-27  David Billinghurst  <David.Billinghurst@riotinto.com>
+ 
+	* g77.dg/f77-edit-i-in.f: New test
+	* g77.dg/f77-edit-i-out.f: New test
+
 2002-01-25  Geoffrey Keating  <geoffk@redhat.com>
 
 	* gcc.dg/debug/debug.exp: New file.
