* configure.in (*-*-netbsd*): New.  Skip target-newlib, target-libiberty, and target-libgloss.  Skip Java-related libraries if not supported for NetBSD on target CPU.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49258 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-26  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* configure.in (*-*-netbsd*): New.  Skip target-newlib, 
+	target-libiberty, and target-libgloss.  Skip Java-related 
+	libraries if not supported for NetBSD on target CPU.
+
 2002-01-25  Douglas B Rupp  <rupp@gnat.com>
 
 	* install-sh: Use _inst.$$_ for temp file name.
