--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-26  Richard Henderson  <rth@redhat.com>
 
+	* config/cris/cris.c (cris_print_operand): Handle 64-bit CONST_INT.
+
+2002-01-26  Richard Henderson  <rth@redhat.com>
+
 	* config/alpha/alpha.c (alpha_sa_mask): Mark RA for unicos here too.
 	(alpha_sa_size): Use alpha_sa_mask to compute size of saved regs.
 
