--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,45 @@
 2002-01-26  Richard Henderson  <rth@redhat.com>
 
+	* Makefile.in (CRTSTUFF_CFLAGS): New.
+	(crtbegin.o, crtend.o, crtbeginS.o, crtendS.o, crtbeginT.o): Use it.
+	* config.gcc (alpha-linux, alpha-freebsd, alpha-netbsd): Use plain
+	crtstuff.c instead of alpha assembly version.
+	* crtstuff.c (CRT_CALL_STATIC_FUNCTION): Rewrite to assume the
+	entire dummy function sequence.  Use FORCE_CODE_SECTION_ALIGN
+	not FORCE_{INIT,FINI}_SECTION_ALIGN.
+	(__do_global_dtors_aux): Mark used.
+	(frame_dummy, __do_global_ctors_aux): Mark used.
+	(fini_dummy, init_dummy): Remove.
+
+	* config/alpha/crtbegin.asm: Remove file.
+	* config/alpha/crtend.asm: Remove file.
+	* config/alpha/t-crtbe: Remove file.
+	* config/alpha/elf.h (CRT_CALL_STATIC_FUNCTION): New.
+	(LINK_EH_SPEC): New.
+
+	* config/cris/cris.h (CRT_CALL_STATIC_FUNCTION): Rewrite old
+	FORCE_INIT_SECTION_ALIGN hack.  Register __fini_start before
+	calling constructors.
+	* config/cris/linux.h (CRT_CALL_STATIC_FUNCTION): Undef.
+
+	* config/i386/i386.h (CRT_CALL_STATIC_FUNCTION): New.
+	* config/i386/linux.h (CRT_CALL_STATIC_FUNCTION): Replace old
+	CRT_END_INIT_DUMMY hack.
+	* config/i386/sol2.h (FORCE_CODE_SECTION_ALIGN): Replace
+	FORCE_{INIT,FINI}_SECTION_ALIGN.
+
+	* config/mcore/mcore-elf.h (FORCE_CODE_SECTION_ALIGN): Replace
+	FORCE_{INIT,FINI}_SECTION_ALIGN.
+
+	* config/s390/s390.h (CRT_CALL_STATIC_FUNCTION): Update for new
+	invocation sequence.
+	* config/sh/sh.h (CRT_CALL_STATIC_FUNCTION): Likewise.
+
+	* doc/tm.texi (CRT_CALL_STATIC_FUNCTION): Update.
+	(FORCE_CODE_SECTION_ALIGN): New.
+
+2002-01-26  Richard Henderson  <rth@redhat.com>
+
 	* config/cris/cris.c (cris_print_operand): Handle 64-bit CONST_INT.
 
 2002-01-26  Richard Henderson  <rth@redhat.com>
