--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,33 @@
 2002-01-26  Richard Henderson  <rth@redhat.com>
 
+	* sched-deps.c (reg_pending_uses_head): New.
+	(reg_pending_barrier): Rename from reg_pending_sets_all.
+	(find_insn_list): Don't mark inline.
+	(find_insn_mem_list): Remove.
+	(add_dependence_list, add_dependence_list_and_free): New.
+	(flush_pending_lists): Replace only_write param with separate
+	for_read and for_write parameters.  Update all callers.  Use
+	add_dependence_list_and_free.
+	(sched_analyze_1): Do not add reg dependencies here; just set
+	the pending bits.  Use add_dependence_list.
+	(sched_analyze_2): Likewise.
+	(sched_analyze_insn): Replace schedule_barrier_found with
+	reg_pending_barrier.  Add all dependencies for pending reg
+	uses, sets, and clobbers.
+	(sched_analyze): Don't add reg dependencies for calls, just
+	set pending bits.  Use regs_invalidated_by_call.  Treat
+	sched_before_next_call as a normal list, not a fake insn.
+	(init_deps): No funny init for sched_before_next_call.
+	(free_deps): Free pending mems lists.  Don't zero reg_last.
+	(init_deps_global): Init reg_pending_uses.
+	(finish_deps_global): Free it.
+	* sched-int.h (deps): Make in_post_call_group_p boolean.  Update docs.
+	(find_insn_mem_list): Remove.
+	* sched-rgn.c (concat_INSN_LIST, concat_insn_mem_list): New.
+	(propagate_deps): Use them.  Zero temp mem lists.
+
+2002-01-26  Richard Henderson  <rth@redhat.com>
+
 	* Makefile.in (CRTSTUFF_CFLAGS): New.
 	(crtbegin.o, crtend.o, crtbeginS.o, crtendS.o, crtbeginT.o): Use it.
 	* config.gcc (alpha-linux, alpha-freebsd, alpha-netbsd): Use plain
