--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-27  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c (function_arg): Remove redundant code.
+
 2002-01-26  Richard Henderson  <rth@redhat.com>
 
 	* sched-deps.c (reg_pending_uses_head): New.
