--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-27  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.md (define_constants): New.
+	(anonymous patterns) Use defined constants appropriately.
+
+2002-01-27  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.c (function_arg): Remove redundant code.
 
 2002-01-26  Richard Henderson  <rth@redhat.com>
