* emit-rtl.c (get_mem_attrs): Don't default alignment for non-BLKmode 	if not STRICT_ALIGNMENT. 	* rtl.h (MEM_ALIGN): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49268 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jan 27 13:23:40 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* emit-rtl.c (get_mem_attrs): Don't default alignment for non-BLKmode
+	if not STRICT_ALIGNMENT.
+	* rtl.h (MEM_ALIGN): Likewise.
+
 2002-01-27  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	* doc/invoke.texi (-fdump-translation-unit): Revert this
